# samp-plugin-template

./: CMakeLists.txt  LICENSE  LICENSES  main.cpp  plugin.def.in  plugin.inc.in  pluginconfig.h.in  pluginutils.cpp  pluginutils.h
SDK/amx/: amx.h
